--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 <body>
     <script src="index.js"></script>
+
+    <h1>DawnLang</h1>
+    <p>DawnLang is a high-level compiled programming language with the speed of C and the relative simplicity of python as well
+    as the ability to directly write C/C++ code in DawnLang and interface with variables and functions that were written in the
+    C/C++ Code!</p>
+    <br>
+    <a href="docs/index.html">Docs</a>
 </body>
 
 </html>
